--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                                 <li class="nav-item">
                                     <a asp-action="Index" asp-controller="SubCatalog" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Loại giày</p>
+                                        <p>Mẫu giày</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
