--- a/SneakerInside/Views/Product/Update.cshtml
+++ b/SneakerInside/Views/Product/Update.cshtml
@@ -1,14 +1,21 @@
-﻿@model SneakerInside.Models.ProductInsert
+﻿@model SneakerInside.Models.ProductGetAndUpdate
 
 @{
     Layout = null;
 }
 
-<form asp-action="Create" onsubmit="return submitCreate(this);" autocomplete="off">
+<form asp-action="Update" onsubmit="return submitUpdate(this);" autocomplete="off">
+    <div class="form-group">
+        <input type="hidden" asp-for="ProductID" class="form-control" />
+    </div>
     <div class="form-group">
         <label asp-for="ProductName" class="control-label"></label>
         <input asp-for="ProductName" class="form-control" />
         <span asp-validation-for="ProductName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Description" class="control-label"></label>
+        <textarea asp-for="Description" class="form-control"></textarea>
     </div>
     <div class="form-group">
         <label asp-for="CatalogID" class="control-label"></label>
@@ -21,15 +28,11 @@
         <span asp-validation-for="SubCatalogID" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Description" class="control-label"></label>
-        <textarea asp-for="Description" rows="3" class="form-control"></textarea>
-    </div>
-    <div class="form-group">
         <label asp-for="Status" class="control-label"></label>
         <select asp-for="Status" class="form-control" asp-items="@ViewBag.status"></select>
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Thêm mới" class="btn btn-success btn-block" />
+        <input type="submit" value="Chỉnh sửa" class="btn btn-info btn-block" />
     </div>
 </form>
