--- a/SneakerInside/Views/ProductItem/Update.cshtml
+++ b/SneakerInside/Views/ProductItem/Update.cshtml
@@ -1,10 +1,13 @@
-﻿@model SneakerInside.Models.ProductItemInsert
+﻿@model SneakerInside.Models.ProductItemGetAndUpdate
 
 @{
     Layout = null;
 }
 
-<form asp-action="Create" onsubmit="return submitCreate(this);" autocomplete="off">
+<form asp-action="Update" onsubmit="return submitUpdate(this);" autocomplete="off">
+    <div class="form-group">
+        <input type="hidden" asp-for="ProductItemID" class="form-control" />
+    </div>
     <div class="form-group">
         <label asp-for="ProductID" class="control-label"></label>
         <select asp-for="ProductID" class="form-control" asp-items="@ViewBag.dropDownProduct"></select>
@@ -26,6 +29,6 @@
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Thêm mới" class="btn btn-success btn-block" />
+        <input type="submit" value="Chỉnh sửa" class="btn btn-info btn-block" />
     </div>
 </form>
