--- a/SneakerInside/Views/User/Index.cshtml
+++ b/SneakerInside/Views/User/Index.cshtml
@@ -1,63 +1,205 @@
-﻿@model IEnumerable<SneakerInside.Models.UserGetAll>
-
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "Danh sách khách hàng";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="card card-info">
-    <div class="card-header">
-        <h3 class="card-title">Danh sách @ViewBag.Name</h3>
+<div class="row">
+    <div class="col-6">
+        <div class="card card-secondary">
+            <div class="card-header">
+                <h3 class="card-title">Danh sách khách hàng</h3>
+            </div>
+            <div class="card-body">
+                <table id="userTable" class="table table-bordered table-hover" width="100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                Email
+                            </th>
+                            <th>
+                                Họ và tên
+                            </th>
+                            <th>
+                                Số điện thoại
+                            </th>
+                            <th>
+                                Địa chỉ
+                            </th>
+                            <th>
+                                Danh sách đơn hàng
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <table id="subCatalogTable" class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.UserID)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Email)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FullName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Phone)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Address)
-                    </th>
-                    <th>
-                        Danh sách đơn hàng
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.UserID)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FullName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Phone)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Address)
-                        </td>
-                        <td style="text-align: center">
-                            <a asp-controller="Order" asp-action="IndexByUserId" asp-route-id="@item.UserID" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+    <div class="col-6">
+        <div class="card card-secondary">
+            <div class="card-header">
+                <h3 class="card-title">Danh sách đơn hàng</h3>
+            </div>
+            <div class="card-body">
+                <table id="orderTable" class="table table-bordered table-hover" width="100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                Ngày tạo
+                            </th>
+                            <th>
+                                Ghi chú
+                            </th>
+                            <th>
+                                Tổng hóa đơn
+                            </th>
+                            <th>
+                                Trạng thái
+                            </th>
+                            <th>
+                                Chi tiết đơn hàng
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-12">
+        <div class="card card-secondary">
+            <div class="card-header">
+                <h3 class="card-title">Chi tiết đơn hàng</h3>
+            </div>
+            <div class="card-body">
+                <table id="orderDetailTable" class="table table-bordered table-hover" width="100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                Ảnh
+                            </th>
+                            <th>
+                                Tên sản phẩm
+                            </th>
+                            <th>
+                                Size
+                            </th>
+                            <th>
+                                Giá mua
+                            </th>
+                            <th>
+                                Số lượng mua
+                            </th>
+                            <th>
+                                Tổng
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
+
+@section Scripts{
+    <script type="text/javascript">
+        //Lấy dữ liệu lên bảng
+        $(document).ready(function () {
+            $('#userTable').DataTable({
+                ajax: {
+                    url: '@Url.Action("GetAll", "User")',
+                    type: 'GET',
+                    datatype: 'json'
+                },
+                columns: [
+                    {
+                        data: 'email'
+                    },
+                    {
+                        data: 'fullName'
+                    },
+                    {
+                        data: 'phone'
+                    },
+                    {
+                        data: 'address'
+                    },
+                    {
+                        data: 'userID',
+                        render: function (data) {
+                            return '<button type="button" class="btn btn-info" onclick="getOrderTable(' + data + ')"><i class="fas fa-edit"></i></button >';
+                        },
+                        orderable: false
+                    }
+                ]
+            });
+        });
+
+        //Hàm lấy danh sách đơn hàng theo người dùng
+        function getOrderTable(data) {
+            $('#orderTable').DataTable({
+                ajax: {
+                    url: '@Url.Action("GetOrderById", "User")/' + data,
+                    type: 'GET',
+                    datatype: 'json'
+                },
+                columns: [
+                    {
+                        data: 'dateCreate'
+                    },
+                    {
+                        data: 'note'
+                    },
+                    {
+                        data: 'total'
+                    },
+                    {
+                        data: 'status'
+                    },
+                    {
+                        data: 'orderID',
+                        render: function (data) {
+                            return '<button type="button" class="btn btn-info" onclick="getOrderDetailTable(' + data + ')"><i class="fas fa-edit"></i></button >';
+                        },
+                        orderable: false
+                    }
+                ],
+                destroy: true
+            });
+        }
+
+        //Hàm lấy danh sách chi tiết đơn hàng theo đơn hàng
+        function getOrderDetailTable(data) {
+            $('#orderDetailTable').DataTable({
+                ajax: {
+                    url: '@Url.Action("GetOrderDetailById", "Order")/' + data,
+                    type: 'GET',
+                    datatype: 'json'
+                },
+                columns: [
+                    {
+                        data: 'image',
+                        render: function (data) {
+                            return '<img src="/Images/' + data + '" asp-append-version="true" width="100" />';
+                        },
+                        orderable: false,
+                    },
+                    {
+                        data: 'productName'
+                    },
+                    {
+                        data: 'sizeName'
+                    },
+                    {
+                        data: 'priceBuy'
+                    },
+                    {
+                        data: 'amountBuy'
+                    },
+                    {
+                        data: 'total'
+                    },
+                ],
+                destroy: true
+            });
+        }
+    </script>
+}
