--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SneakerInside</title>
+    <title>@ViewData["Title"]</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="~/adminLTE/plugins/fontawesome-free/css/all.min.css">
+    <!-- daterange picker -->
+    <link rel="stylesheet" href="~/adminLTE/plugins/daterangepicker/daterangepicker.css">
     <!-- DataTables -->
     <link rel="stylesheet" href="~/adminLTE/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/adminLTE/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
@@ -22,8 +24,8 @@
 
         <!-- Preloader -->
         @*<div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__shake" src="~/adminLTE/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
-        </div>*@
+                <img class="animation__shake" src="~/adminLTE/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+            </div>*@
 
         <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -128,6 +130,29 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="nav-item menu-open">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <p>
+                                    Báo cáo
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a asp-action="AmountStock" asp-controller="Report" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Danh sách hàng tồn</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Order" asp-controller="Report" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Danh sách đơn hàng</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
@@ -154,7 +179,6 @@
             <!-- /.content -->
         </div>
         <!-- /.content-wrapper -->
-
         <!-- Modal thêm, sửa-->
         <div class="modal fade" id="commonModal" tabindex="-1" role="dialog">
             <div class="modal-dialog modal-lg" role="document">
@@ -207,6 +231,9 @@
     <script src="~/adminLTE/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/adminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- date-range-picker -->
+    <script src="~/adminLTE/plugins/moment/moment.min.js"></script>
+    <script src="~/adminLTE/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- AdminLTE App -->
     <script src="~/adminLTE/dist/js/adminlte.min.js"></script>
     <!--Boostrap growl-->
@@ -227,6 +254,13 @@
     <!--Validate-->
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <!--High charts-->
+    <script src="~/lib/HighCharts/highcharts.js"></script>
+    <script src="~/lib/HighCharts/data.js"></script>
+    <script src="~/lib/HighCharts/drilldown.js"></script>
+    <script src="~/lib/HighCharts/exporting.js"></script>
+    <script src="~/lib/HighCharts/export-data.js"></script>
+    <script src="~/lib/HighCharts/accessibility.js"></script>
     <!--Custom JS-->
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
